tests/positive/LetOpen.juvix
module LetOpen;

module M;
  axiom A : Type;

  module M1;
    axiom A : Type;
  end;
end;

-- axiom B : let
--             open M;
--           in A;

-- checks shadowing
axiom X :
  let
    open M
  in let
       open M1
     in A;

module N;

end;

axiom A : Type;

-- checks that there `A` didn't leak from the local open statement.
axiom C : A;
